# lineblock

./: .gitignore  README.md  block_extract.py  block_insert.py  common.py  corepost.py  develop.py  development1.py  development2.py  log.txt  main.py  mkdocs.yml  pyproject.toml  temp.py  test_factorial.py
docs/: index.md  tutorial.md
examples/: factorial.md  fibonacci.md  fibonacci1.md  test_factorial.py  test_fibonacci.py
examples/core/post/: Command_example.generated  (+1 more)
lineblock/: __init__.py  block_extract.py  block_insert.py  cli.py  defaults.py  exceptions.py  lineblock.py  markers.py  process.py  sink.py  source.py
lineblocks/: block_extract.py  block_insert.py
scripts/: block_insert.py
src/: process_chunks.py
temp/sources/: basic_extract.md  extract_suffix.md  extract_suffix_indent.md
tests/: conftest.py  test_all.py  test_basic.py  test_block_insert.py  test_ensure_balanced_parentheses.py  test_hop_skip.py  test_isolate_blocks.py  test_new.py  test_parse_parentheses.py  test_process_chunks.py
tests/data/: source.py
tests/expected/: basic.md  basic.py  indent_1.md  indent_2.md  indent_3.md  last_line.md  not_found.md  not_found1.md
tests/outputs/: basic.md  last_line.md
tests/snippets/: extract_nested_markers.md
tests/sources/: basic.md  basic_extract.md  extract_indent_1.md  extract_indent_2.md  extract_last_line.md  extract_nested_markers.md  extract_orphaned_begin_marker.md  extract_orphaned_end_marker.md  extract_suffix.md  extract_suffix_indent.md  insert_orphaned_end_marker.md  last_line.md
tests/testdata/: source.md
(+2 files in other folders)
