[project]
name = "lineblock"
version = "0.0.2"
description = "Lineblocks is a documentation synchronization tool that maintains consistency between code examples and their corresponding documentation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]
license = { file = "LICENSE" }  # Points to the file containing the GPL v3 license
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
authors = [
    {name = "Kim Jarvis", email = "kim.jarvis@tpfsystems.com"}
]
maintainers = [
    {name = "Kim Jarvis", email = "kim.jarvis@tpfsystems.com"}
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

# Include additional files in the package
[tool.flit.module]
name = "lineblock"

[tool.flit.sdist]
include = [
    "LICENSE",
    "README.md"
]

[project.urls]
Homepage = "https://github.com/kimjarvis/lineblock"
Documentation = "https://github.com/kimjarvis/lineblock"
"Source Code" = "https://github.com/kimjarvis/lineblock"
"Bug Tracker" = "https://github.com/kimjarvis/lineblock/issues"

[project.scripts]
lineblock = "lineblock.cli:main"

